--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   intl: 0.15.7
   shared_preferences: ^0.5.12+4
+  sqflite: ^1.3.0
 
   cupertino_icons: ^1.0.0
 
@@ -22,3 +23,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+ 
