--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: 0.15.7
   shared_preferences: ^0.5.12+4
   sqflite: ^1.3.0
+  path_provider: ^1.6.27
 
   cupertino_icons: ^1.0.0
 
